[gd_scene load_steps=2 format=3 uid="uid://cohi0rdabl8ux"]

[ext_resource type="Script" uid="uid://buvtuuk1s123n" path="res://ShopUI.gd" id="1_2ga4l"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ga4l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.4, 0.9)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "SHOP"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="GemsTab" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_name = "Buy Gems"
metadata/_tab_index = 0

[node name="InfoLabel" type="Label" parent="TabContainer/GemsTab"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
text = "10 Money = 1 Gem"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="TabContainer/GemsTab"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.0
offset_right = 75.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Buy 1 Gem"

[node name="PullsTab" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Buy Pulls"
metadata/_tab_index = 1

[node name="InfoLabel" type="Label" parent="TabContainer/PullsTab"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
text = "5 Gems = 1 Pull"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="TabContainer/PullsTab"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.0
offset_right = 75.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Buy 1 Pull"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"
